<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="50sp"
            app:fontFamily="@font/ewert" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:contentDescription="@null"
            android:layout_marginTop="-70dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/camera"
            android:layout_width="207dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginVertical="10dp"
            android:background="@drawable/circle"
            android:text="@string/camera_page"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/money_green" />

        <Button
            android:id="@+id/load_image"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginVertical="10dp"
            android:background="@drawable/circle"
            android:text="@string/load_image"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/money_green" />

        <Button
            android:id="@+id/info"
            android:layout_width="119dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginVertical="10dp"
            android:background="@drawable/circle"
            android:text="@string/info_page"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/money_green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>