<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton3"
            android:layout_width="182dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/circle"
            android:text="@string/back_button"
            app:backgroundTint="@color/money_green"
            app:layout_constraintBaseline_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/image_taken"
            android:visibility="visible"
            android:layout_width="387dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="7"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Image_description"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="323dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="32dp"
            android:text="@string/display_fact"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>